<resources>
    <string name="app_name">Ink4YouApp</string>
    <string name="welcome_msg">Bem vindo!</string>
    <string name="slogan">"Procurando tattoo? Ink4You"</string>
    <string name="instagram_msg_conection">Gostaria de utilizar a integração com o Instagram?</string>
    <string name="import_photos_instagram">Importar fotos do Instagram</string>
    <string name="term_of_use_label">Política de privacidade</string>
    <string name="accept_term_of_use">Aceito a política de privacidade do Ink4You.</string>
    <string name="login_label">Logar-se</string>
    <string name="login_desc">Preencha os campos abaixo para se logar ;)</string>
    <string name="user_label">Usuário</string>
    <string name="tattoo_artist_label">Tatuador</string>
    <string name="personal_infos">Dados pessoais</string>
    <string name="personal_infos_desc">Preencha seus dados para prosseguir com o cadastro</string>
    <string name="account_infos">Dados da conta</string>
    <string name="account_infos_desc">Preencha seus dados para finalizar o cadastro</string>
    <string name="name_placeholder">Nome</string>
    <string name="cpf_placeholder">CPF</string>
    <string name="cnpj_placeholder">CNPJ</string>
    <string name="birth_date_placeholder">Data de nascimento</string>
    <string name="telephone_placeholder">Telefone</string>
    <string name="zip_code_placeholder">CEP</string>
    <string name="number_home_placeholder">Nº</string>
    <string name="email_placeholder">Email</string>
    <string name="password_placeholder">Senha</string>
    <string name="confirm_password_placeholder">Confirmar senha</string>
    <string name="username">Username</string>
    <string name="getin_label">Entrar</string>
    <string name="next_label">Próximo</string>
    <string name="finish_label">Finalizar</string>
    <string name="tattoo_artist_about_label">Sobre você</string>
    <string name="have_registry">Já possuo cadastro</string>
    <string name="havent_registry">Não possuo cadastro</string>
    <string name="registry_label">Cadastrar-se</string>
    <string name="registry_label_2">Cadastro</string>
    <string name="registry_desc">Escolha uma das opções abaixo para se cadastrar</string>
    <string name="user_btn">Quero me tatuar</string>
    <string name="tattoo_artist_btn">Sou tatuador</string>
    <string name="nav_title_explorer">Explorar</string>
    <string name="nav_title_tattooartist">Tatuadores</string>
    <string name="nav_title_tattoo">Tatuagens</string>
    <string name="nav_title_profile">Perfil</string>
    <string name="back_label">Voltar</string>
    <string name="explore_recent_tattos_title">Últimas postagens</string>
    <string name="explore_recent_tattos_description">As tatuagens postadas mais recentemente!</string>
    <string name="explore_popular_syles_title">Estilos populares</string>
    <string name="explore_popular_syles_description">Os estilos que mais podem combinar com você!</string>
    <string name="explore_new_tattoo_artists_title">Novos tatuadores</string>
    <string name="explore_new_tattoo_artists_description">Os tatuadores que acabaram de chegar!</string>
    <string name="search_placeholder_tattoo">Pesquisar tatuagens</string>
    <string name="search_placeholder_tatuadores">Pesquisar tatuadores</string>
    <string name="tattoo_desc_label">Descrição</string>
    <string name="tattoo_about_label">Sobre</string>
    <string name="tattoo_local_label">Local: </string>
    <string name="tattoo_manager_label">Gerenciamento</string>
    <string name="title_placeholder">Título</string>
    <string name="local_placeholder">Local</string>
    <string name="style_placeholder">Estilo</string>
    <string name="description_placeholder">Descrição</string>
    <string name="edit_tattoo_artist_label">Edição de perfil</string>
    <string name="update_label">Atualizar</string>
    <string name="insert_tattoo_label">Cadastrar</string>
    <string name="my_tattoos_label">Minhas tatuagens</string>
    <string name="instruction_edit_tattoos">Clique e segure para editar ou excluir uma tatuagem</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="option_edit">Editar</string>
    <string name="option_delete">Excluir</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
</resources>