<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_image"
            android:gravity="center_horizontal|bottom"
            android:isScrollContainer="false"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="25dp">

                <ImageView
                    android:id="@+id/iv_ink_logo"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/ink_logo"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="bottom"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/saira_semibold"
                        android:text="@string/welcome_msg"
                        android:textColor="@color/white"
                        android:textSize="36dp" />

                    <TextView
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/saira_regular"
                        android:text="@string/slogan"
                        android:textColor="@color/white"
                        android:textSize="26dp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="385dp"
                android:background="@drawable/linear_rounded"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/linear_login"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingHorizontal="45dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/login_label"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="24dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/login_desc"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="15dp" />

                    <EditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/custom_input"
                        android:drawableStart="@drawable/ic_email"
                        android:drawablePadding="10dp"
                        android:hint="@string/email_placeholder"
                        android:paddingStart="12dp"
                        android:paddingEnd="12dp"
                        android:textSize="14dp" />

                    <EditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="12dp"
                        android:background="@drawable/custom_input"
                        android:drawableStart="@drawable/ic_password"
                        android:drawablePadding="10dp"
                        android:hint="@string/password_placeholder"
                        android:inputType="numberPassword"
                        android:paddingStart="12dp"
                        android:paddingEnd="12dp"
                        android:textSize="14dp" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/blue_gradient"
                        android:onClick="authUser"
                        android:text="@string/getin_label"
                        android:textAllCaps="false"
                        android:textColor="@color/white" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:onClick="showRegistryOptions"
                        android:text="@string/havent_registry"
                        android:textAlignment="center"
                        android:textSize="14dp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear_registry"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingHorizontal="50dp"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/registry_label"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="24dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/registry_desc"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="15dp" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_marginTop="25dp"
                        android:background="@drawable/blue_gradient"
                        android:onClick="goToUserRegistry"
                        android:text="@string/user_btn"
                        android:textAllCaps="false"
                        android:textColor="@color/white" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_marginTop="12dp"
                        android:background="@drawable/blue_gradient"
                        android:onClick="goToTattooRegistry"
                        android:text="@string/tattoo_artist_btn"
                        android:textAllCaps="false"
                        android:textColor="@color/white" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:onClick="showLogin"
                        android:text="@string/back_label"
                        android:textAlignment="center"
                        android:textSize="14dp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>