<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TattooManager">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="80dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingHorizontal="32dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="30dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@drawable/ic_arrow_back" />

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/ink_logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right|center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:fontFamily="@font/saira_regular"
                    android:text="@string/tattoo_manager_label"
                    android:textAlignment="textEnd"
                    android:textColor="@color/black"
                    android:textSize="15dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/saira_regular"
                    android:text="|"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/saira_semibold"
                    android:text="@string/nav_title_tattoo"
                    android:textAlignment="textEnd"
                    android:textColor="@color/black"
                    android:textSize="22dp" />

            </LinearLayout>

        </LinearLayout>

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/iv_profile"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/profile"
            app:civ_shadow_radius="10dp" />

        <ImageButton
            android:id="@+id/BSelectImage"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="-35dp"
            android:background="@drawable/circle_btn"
            android:onClick="imageChooser"
            android:src="@drawable/ic_photo"
            android:textColor="@android:color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="12dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_tattoo_title"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/custom_input"
                android:drawablePadding="10dp"
                android:hint="@string/title_placeholder"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textSize="14dp" />

            <EditText
                android:id="@+id/et_tattoo_local"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/custom_input"
                android:drawablePadding="10dp"
                android:hint="@string/local_placeholder"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textSize="14dp" />

        </LinearLayout>

        <Spinner
            android:id="@+id/spinner_styles"
            android:background="@drawable/custom_input"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textSize="14dp" />

        <EditText
            android:id="@+id/et_tattoo_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:background="@drawable/custom_input"
            android:drawablePadding="10dp"
            android:hint="@string/description_placeholder"
            android:inputType="textMultiLine"
            android:lines="8"
            android:maxLines="10"
            android:minLines="6"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:scrollbars="vertical"
            android:textSize="14dp" />

        <Button
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/blue_pill_gradient"
            android:text="@string/insert_tattoo_label"
            android:textAllCaps="false"
            android:onClick="createTattoo"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/saira_medium"
                android:text="@string/my_tattoos_label"
                android:textColor="@color/black"
                android:textSize="17dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/saira_regular"
                android:text="@string/instruction_edit_tattoos"
                android:textColor="@color/black"
                android:textSize="14dp" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tattoosRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>